# COSMOS

./: .gitignore  Home.py  README.md  app.py  config.yaml  requirements.txt
.github/workflows/: main_cosmosapp.yml
config/: prompts.py  settings.py
core/: chain.py  data_extraction.py  mistral_ocr.py  processing.py  vector_store.py
core/agents/: gmail_logic.py
core/cpp_modules/: libpoppler-cpp.so.1
cpp_extensions/: CMakeLists.txt  setup.py
cpp_extensions/hash_generation/: CMakeLists.txt  hash_generator.cpp
cpp_extensions/pdf_extraction/: CMakeLists.txt  pdf_extractor.cpp
cpp_extensions/text_chunking/: CMakeLists.txt
pages/: 1_RAG_Chatbot.py  2_YouTube_Processor.py  3_Gmail_Agent.py
